# ProPauli

./: .buildinfo  .clang-format  CMakeLists.txt  README.md  api_reference.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: api_reference.doctree  environment.pickle  getting_started.doctree  index.doctree
.doctrees/guides/: circuit_guide.doctree  observable_guide.doctree  symbolic_guide.doctree
.github/workflows/: benchmark.yml  cmake-multi-platform.yml  documentation.yml
_sources/: index.rst.txt
_sources/guides/: observable_guide.rst.txt
benchmarks/: circuits.cpp  helper.cpp  helper.hpp  observables.cpp  pauli.cpp  pauli_term.cpp  qaoa_maxcut.cpp  symbolic.cpp  test.cpp
dev/bench/: data.js
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  api_reference.rst  conf.py.in  getting_started.rst  index.rst
doc/guides/: circuit_guide.rst  symbolic_guide.rst
guides/: circuit_guide.html  observable_guide.html  symbolic_guide.html
include/: adapter.hpp  circuit.hpp  maths.hpp  merge.hpp  noise_model.hpp  non_owning_pauli_term.hpp  observable.hpp  pauli.hpp  pauli_container.hpp  pauli_gates.hpp  pauli_term.hpp  pauli_term_container.hpp  qexcept.hpp  scheduler.hpp  truncate.hpp
include/container/: bit_operations.hpp  dirty_set.hpp  dirty_set_internal.hpp  packed_iterators.inl  packed_iterators.tpl  packed_pauli_term.inl  packed_pauli_term.tpl
include/symbolic/: coefficient.hpp  compiled_expression.hpp  compiler.inl  expression_tree.hpp
include/symbolic/expression_tree/: compare.inl  evaluate.inl  factor.inl  nodes.hpp  simplify.inl  substitute.inl  to_string.inl
include/symbolic/expression_tree/simplify/: addition.inl  division.inl  helpers.inl  multiplication.inl
src/: circuit.cpp  scheduler.cpp
tests/: circuits.cpp  compiled_expression.cpp  dirty_set.cpp  expression_tree.cpp  noise_model.cpp  non_owning.cpp  observable.cpp  pauli.cpp  pauli_term.cpp  pauli_term_container.cpp  readme.cpp  scheduler.cpp  symbolic_circuit.cpp  symbolic_coefficient.cpp  symbolic_observable.cpp  truncator.cpp
tests/snippets/: adapter.cpp  circuit.cpp  custom_scheduler_guide.cpp  merge.cpp  noise_model.cpp  non_owning_pauli_term.cpp  observable.cpp  observable_guide.cpp  pauli_term.cpp  pauli_term_container.cpp  quickstart.cpp  scheduler.cpp  symbolic.cpp  symbolic_guide.cpp  truncate.cpp
